Propose more clear styling.
This commit changes the CSS to include:

* No border and margin or padding on the `html` and `body` elements.
* Adds a missing `</html>` tag.

It is made with love. <3

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <head>
 	<title>solarpunk.cool</title>
 	<style>
+		html, body {
+			margin: 0;
+			border: none;
+			padding: 0;
+		}
 		body{
 			background-color: rgba(120, 107, 107, 0.72);
 			font-family: monospace;
@@ -15,12 +20,12 @@
 		}
 		.diskette{
 			width: 80%;
-			height: 100vh;
 			color: #d1d177;
 			padding: 10px;
 		}
 		#title{
-    		font-size: 0.5em;
+			margin-top: 0;
+			font-size: 0.5em;
 		}
 	</style>
 </head>
@@ -82,3 +87,4 @@ C:::::C              o::::o     o::::om::::m   m::::m   m::::m p:::::p     p::::
 		<h1>Talk to us on <a href="https://scuttlebutt.nz">Scuttlebutt</a></h1>
 	</div>
 </body>
+</html>
